адаптив главной страницы [2]

--- a/index.html
+++ b/index.html
@@ -1207,86 +1207,93 @@
                         <h2>Популярные готовые комплекты</h2>
                         <p>Комплекты, сформированные под ваши нужды</p>
                     </div>
-                    <div class="complects__inner">
-                        <a class="complects__item" href="./product.html">
-                            <div class="complects__item-label">
-                                -37%
+                    <div class="complects__wrapper">
+                        <div class="swiper complects-swiper">
+                            <div class="swiper-wrapper compeclts-swiper-wrapper complects__inner">
+                                <a class="swiper-slide complect-swiper-slide complects__item" href="./product.html">
+                                    <div class="complects__item-label">
+                                        -37%
+                                    </div>
+                                    <div class="complects__item-img">
+                                        <img src="./img/complects/1.jpg" alt="">
+                                    </div>
+                                    <div class="complects__item-info">
+                                        <div class="complects__item-descr">
+                                            <p class="complects__item-name">
+                                                Для дома и дачи
+                                            </p>
+                                            <p class="complects__item-quantity">
+                                                2 товара
+                                            </p>
+                                        </div>
+                                        <div class="complects__item-cost">
+                                            <p class="complects__item-old-price">
+                                                16 781 ₽
+                                            </p>
+                                            <p class="complects__item-price">
+                                                11 243 ₽
+                                            </p>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="swiper-slide complect-swiper-slide complects__item" href="./product.html">
+                                    <div class="complects__item-label">
+                                        -37%
+                                    </div>
+                                    <div class="complects__item-img">
+                                        <img src="./img/complects/2.jpg" alt="">
+                                    </div>
+                                    <div class="complects__item-info">
+                                        <div class="complects__item-descr">
+                                            <p class="complects__item-name">
+                                                Для дома и дачи
+                                            </p>
+                                            <p class="complects__item-quantity">
+                                                2 товара
+                                            </p>
+                                        </div>
+                                        <div class="complects__item-cost">
+                                            <p class="complects__item-old-price">
+                                                16 781 ₽
+                                            </p>
+                                            <p class="complects__item-price">
+                                                11 243 ₽
+                                            </p>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="swiper-slide complect-swiper-slide complects__item" href="./product.html">
+                                    <div class="complects__item-label">
+                                        -37%
+                                    </div>
+                                    <div class="complects__item-img">
+                                        <img src="./img/complects/3.jpg" alt="">
+                                    </div>
+                                    <div class="complects__item-info">
+                                        <div class="complects__item-descr">
+                                            <p class="complects__item-name">
+                                                Для дома и дачи
+                                            </p>
+                                            <p class="complects__item-quantity">
+                                                2 товара
+                                            </p>
+                                        </div>
+                                        <div class="complects__item-cost">
+                                            <p class="complects__item-old-price">
+                                                16 781 ₽
+                                            </p>
+                                            <p class="complects__item-price">
+                                                11 243 ₽
+                                            </p>
+                                        </div>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="complects__item-img">
-                                <img src="./img/complects/1.jpg" alt="">
-                            </div>
-                            <div class="complects__item-info">
-                                <div class="complects__item-descr">
-                                    <p class="complects__item-name">
-                                        Для дома и дачи
-                                    </p>
-                                    <p class="complects__item-quantity">
-                                        2 товара
-                                    </p>
-                                </div>
-                                <div class="complects__item-cost">
-                                    <p class="complects__item-old-price">
-                                        16 781 ₽
-                                    </p>
-                                    <p class="complects__item-price">
-                                        11 243 ₽
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                        <a class="complects__item" href="./product.html">
-                            <div class="complects__item-label">
-                                -37%
-                            </div>
-                            <div class="complects__item-img">
-                                <img src="./img/complects/2.jpg" alt="">
-                            </div>
-                            <div class="complects__item-info">
-                                <div class="complects__item-descr">
-                                    <p class="complects__item-name">
-                                        Для дома и дачи
-                                    </p>
-                                    <p class="complects__item-quantity">
-                                        2 товара
-                                    </p>
-                                </div>
-                                <div class="complects__item-cost">
-                                    <p class="complects__item-old-price">
-                                        16 781 ₽
-                                    </p>
-                                    <p class="complects__item-price">
-                                        11 243 ₽
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                        <a class="complects__item" href="./product.html">
-                            <div class="complects__item-label">
-                                -37%
-                            </div>
-                            <div class="complects__item-img">
-                                <img src="./img/complects/3.jpg" alt="">
-                            </div>
-                            <div class="complects__item-info">
-                                <div class="complects__item-descr">
-                                    <p class="complects__item-name">
-                                        Для дома и дачи
-                                    </p>
-                                    <p class="complects__item-quantity">
-                                        2 товара
-                                    </p>
-                                </div>
-                                <div class="complects__item-cost">
-                                    <p class="complects__item-old-price">
-                                        16 781 ₽
-                                    </p>
-                                    <p class="complects__item-price">
-                                        11 243 ₽
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
+                        </div>
+                            <div class="swiper-button-next complects-swiper-button-next"></div>
+                            <div class="swiper-button-prev complects-swiper-button-prev"></div>
                     </div>
+                    
                     <a class="complects__link" href="#">
                         Смотреть все комплекты
                         <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1374,6 +1381,69 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
+                                                <div class="product-card__color">
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label checked"
+                                                            style="background-color: #D80027;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label"
+                                                            style="background-color: #FFDA44;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label"
+                                                            style="background-color: #6DA544;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label"
+                                                            style="background-color: #0052B4;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label"
+                                                            style="background-color: #D80027;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label"
+                                                            style="background-color: #19214F;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label"
+                                                            style="background-color: #537CE5;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label"
+                                                            style="background-color: #D44F68;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label"
+                                                            style="background-color: #A2001D;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                    <div class="product-card__color-item">
+                                                        <label class="product-card__color-label"
+                                                            style="background-color: #FF8023;">
+                                                            <input type="radio" name="color">
+                                                        </label>
+                                                    </div>
+                                                </div>
+
                                                 <div class="product-card__prices skeleton">
                                                     <span class="product-card__price">
                                                         6 781 ₽
@@ -1381,6 +1451,7 @@
                                                     <span class="product-card__price-old">
                                                     </span>
                                                 </div>
+                                                
                                             </div>
 
                                             <div class="product-card__tools">
@@ -1398,6 +1469,19 @@
                                                 </button>
                                             </div>
 
+                                        </div>
+                                        <div class="product-card__footer-buttons">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
+                                                <button class="minus">-</button>
+                                                <span>1</span>
+                                                <button class="plus">+</button>
+                                            </div>
+                                            <button class="product-card__buy-click blue">
+                                                Купить в 1 клик
+                                            </button>
                                         </div>
                                         <div class="product-card__footer">
                                             <div class="product-card__color">
