апдейт анимации нижнего меню для мобильной версии

--- a/index.html
+++ b/index.html
@@ -5542,6 +5542,7 @@
             <div class="mobile-menu__slider">
                 <span></span>
             </div>
+            <div class="line"></div>
         </ul>
     </div>
 
