--- a/index.html
+++ b/index.html
@@ -973,6 +973,276 @@
                     </div>
                 </div>
             </div>
+            <div class="header-menu active">
+                <div class="header-menu__inner">
+                    <button class="header-menu__close close-btn close-btn--header-menu">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
+                                fill="white" />
+                        </svg>
+                    </button>
+                    <div class="header-city">
+                        <div class="header-city__icon">
+                            <img src="./img/icons/city-icon.svg" alt="City icon">
+                        </div>
+                        <div class="header-city__text">
+                            <p class="header-city__descr">
+                                Город
+                            </p>
+                            <div class="header-city__select">
+                                <button class="header-city__button">Екатеринбург</button>
+                            </div>
+                        </div>
+                    </div>
+                    <nav class="header-menu__nav">
+                        <div class="header-menu__nav-box">
+                            <h4 class="header-menu__nav-title">
+                                <a href="#">
+                                    Каталог
+                                </a>
+                            </h4>
+                            <ul class="header-menu__nav-list">
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="./catalog.html">
+                                        Мойки
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="./catalog.html">
+                                        Смесители
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="./catalog.html">
+                                        Кухонные вытяжки
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="./catalog.html">
+                                        Варочные панели
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="./catalog.html">
+                                        Духовые шкафы
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link header-menu__nav-link--show" href="#">
+                                        Показать все
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="header-menu__nav-box">
+                            <h4 class="header-menu__nav-title">
+                                <a href="#">
+                                    Информация
+                                </a>
+                            </h4>
+                            <ul class="header-menu__nav-list">
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Доставка
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Гарантия
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Сервисные центры
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Конфиденциальности
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Обмен и возврат товара
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="header-menu__nav-box">
+                            <h4 class="header-menu__nav-title">
+                                <a href="#">
+                                    О нас
+                                </a>
+                            </h4>
+                            <ul class="header-menu__nav-list">
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        О компании
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Контакты
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Новости
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Реферальная программа
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Обратная связь
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="header-menu__nav-box">
+                            <h4 class="header-menu__nav-title">
+                                <a href="#">
+                                    Контакты
+                                </a>
+                            </h4>
+                            <ul class="header-menu__nav-list">
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        О компании
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Контакты
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Новости
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Реферальная программа
+                                    </a>
+                                </li>
+                                <li class="header-menu__nav-item">
+                                    <a class="header-menu__nav-link" href="#">
+                                        Обратная связь
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                    <div class="header-menu__panel">
+                        <a class="header-menu__panel-item" href="./personal.html">
+                            <span class="header-menu__panel-img">
+                                <img src="./img/icons/user.svg" alt="">
+                            </span>
+                            <span class="header-menu__panel-text">
+                                <span>
+                                    Личный кабинет
+                                </span>
+                            </span>
+                            
+                        </a>
+                        <a class="header-menu__panel-item" href="#">
+                            <span class="header-menu__panel-img">
+                                <img src="./img/icons/compare.svg" alt="">
+                            </span>
+                            <span class="header-menu__panel-text">
+                                <span>
+                                    Сравнение
+                                </span>
+                            </span>
+                        </a>
+                        <a class="header-menu__panel-item" href="#">
+                            <span class="header-menu__panel-img">
+                                <img src="./img/icons/heart.svg" alt="">
+                            </span>
+                            <span class="header-menu__panel-text">
+                                <span>
+                                    Избранное
+                                </span>
+                            </span>
+                        </a>
+                        <a class="header-menu__panel-item" href="#">
+                            <span class="header-menu__panel-img">
+                                <img src="./img/icons/cart.svg" alt="">
+                            </span>
+                            <span class="header-menu__panel-text">
+                                <span>
+                                    Корзина
+                                </span>
+                            </span>
+                        </a>
+                        <a class="header-menu__panel-item" href="tel:+73433799868">
+                            <span class="header-menu__panel-img">
+                                <img src="./img/icons/footer/footer-tel.svg" alt="">
+                            </span>
+                            <span class="header-menu__panel-text">
+                                <span class="suptitle">
+                                    Телефон
+                                </span>
+                                <span>
+                                    8 (343) 379-98-68
+                                </span>
+                            </span>
+                        </a>
+                        <a class="header-menu__panel-item" href="mailto:sale@ekrom.ru">
+                            <span class="header-menu__panel-img">
+                                <img src="./img/icons/footer/footer-mail.svg" alt="">
+                            </span>
+                            <span class="header-menu__panel-text">
+                                <span class="suptitle">
+                                    Почта
+                                </span>
+                                <span>
+                                    sale@ekrom.ru
+                                </span>
+                            </span>
+                        </a>
+                        <a class="header-menu__panel-item" href="https://yandex.ru/maps/-/CDu7NFNp" target="_blank">
+                            <span class="header-menu__panel-img">
+                                <img src="./img/icons/footer/footer-geo.svg" alt="">
+                            </span>
+                            <span class="header-menu__panel-text">
+                                <span class="suptitle">
+                                    Адрес офиса
+                                </span>
+                                <span>
+                                    г. Екатеринбург, ул. Карла Либкнехта, 22, оф. 419, 4 этаж
+                                </span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="header-menu__socials">
+                        <a class="header-menu-link round-btn round-btn--header-menu vk"
+                            href="https://vk.com/ekromshop" target="_blank"
+                            aria-label="Перейти в ВК сообщество компании">
+                            <img src="./img/icons/footer/vk.svg" alt="">
+                        </a>
+                        <a class="header-menu-link round-btn round-btn--header-menu youtube" href="#"
+                            aria-label="Перейти на YouTube-канал компании">
+                            <img src="./img/icons/footer/youtube.svg" alt="">
+                        </a>
+                        <a class="header-menu-link round-btn round-btn--header-menu telegram"
+                            href="https://t.me/ekromshop" target="_blank"
+                            aria-label="Перейти в телеграм-канал компании">
+                            <img src="./img/icons/footer/telegram.svg" alt="">
+                        </a>
+                        <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="#"
+                            aria-label="Написать в whatsapp">
+                            <img src="./img/icons/footer/whatsapp.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                
+            </div>
         </header>
 
         <main>
@@ -5473,10 +5743,10 @@
 
     </div>
 
-    <div id="mobile-menu">
-        <ul class="mobile-menu__inner">
-            <li class="mobile-menu__item active">
-                <a href="#">
+    <div id="mobile-bottom-menu">
+        <ul class="mobile-bottom-menu__inner">
+            <li class="mobile-bottom-menu__item active">
+                <a href="./index.html">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M17.6977 8.04688L16.1771 6.66134V2.06701C16.1771 1.77469 15.9401 1.53767 15.6477 1.53767H11.9874C11.6951 1.53767 11.4581 1.77465 11.4581 2.06701V2.36141L9.62166 0.68808C9.26718 0.365029 8.73263 0.365064 8.37829 0.688045L0.302268 8.04692C0.0183462 8.30567 -0.0754858 8.70434 0.0632407 9.06254C0.202002 9.42075 0.539854 9.65219 0.924006 9.65219H2.21385V17.0252C2.21385 17.3175 2.45084 17.5545 2.7432 17.5545H7.16983C7.46215 17.5545 7.69918 17.3175 7.69918 17.0252V12.5485H10.3008V17.0252C10.3008 17.3175 10.5378 17.5546 10.8301 17.5546H15.2566C15.5489 17.5546 15.7859 17.3176 15.7859 17.0252V9.65222H17.076C17.4601 9.65222 17.798 9.42075 17.9368 9.06258C18.0755 8.70434 17.9817 8.30567 17.6977 8.04688ZM15.2566 8.59352C14.9643 8.59352 14.7272 8.83051 14.7272 9.12287V16.4959H11.3595V12.0192C11.3595 11.7269 11.1225 11.4898 10.8302 11.4898H7.16983C6.87751 11.4898 6.64048 11.7268 6.64048 12.0192V16.4959H3.27251V9.12287C3.27251 8.83055 3.03553 8.59352 2.74317 8.59352H1.27423L9.00003 1.55384L11.631 3.95118C11.786 4.09237 12.0097 4.12875 12.2014 4.04413C12.3931 3.9594 12.5168 3.76949 12.5168 3.55989V2.59636H15.1184V6.89513C15.1184 7.04408 15.1812 7.18608 15.2913 7.28642L16.7258 8.59352H15.2566Z"
@@ -5484,8 +5754,8 @@
                     </svg>
                 </a>
             </li>
-            <li class="mobile-menu__item">
-                <a href="#">
+            <li class="mobile-bottom-menu__item">
+                <a href="./personal.html">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M9 9C11.0711 9 12.75 7.32107 12.75 5.25C12.75 3.17893 11.0711 1.5 9 1.5C6.92893 1.5 5.25 3.17893 5.25 5.25C5.25 7.32107 6.92893 9 9 9Z"
@@ -5496,8 +5766,8 @@
                     </svg>
                 </a>
             </li>
-            <li class="mobile-menu__item">
-                <a href="#">
+            <li class="mobile-bottom-menu__item">
+                <a href="./cart.html">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M6.60758 1.5L3.89258 4.2225" stroke="white" stroke-width="1.2" stroke-miterlimit="10"
                             stroke-linecap="round" stroke-linejoin="round" />
@@ -5514,7 +5784,7 @@
                     </svg>
                 </a>
             </li>
-            <li class="mobile-menu__item">
+            <li class="mobile-bottom-menu__item">
                 <a href="#">
                     <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -5523,7 +5793,7 @@
                     </svg>
                 </a>
             </li>
-            <li class="mobile-menu__item">
+            <li class="mobile-bottom-menu__item">
                 <a href="#">
                     <svg width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0.68457 3.87012H11.0646C12.3096 3.87012 13.3146 4.87512 13.3146 6.12012V8.61012"
@@ -5539,10 +5809,10 @@
                     </svg>
                 </a>
             </li>
-            <div class="mobile-menu__slider">
+            <div class="mobile-bottom-menu__slider">
                 <span></span>
             </div>
-            <div class="line"></div>
+            <div class="mobile-bottom-line"></div>
         </ul>
     </div>
 
