Реализовал раскрытие / скрытие бокового меню по свайпу

--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
                     </div>
                 </div>
             </div>
-            <div class="header-menu active">
+            <div class="header-menu">
                 <div class="header-menu__inner">
                     <button class="header-menu__close close-btn close-btn--header-menu">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1577,7 +1577,7 @@
 
             <section class="bestseller">
                 <div class="container">
-                    <div class="title title--center skeleton">
+                    <div class="title title--center skeleton title-bestseller">
                         <h2>
                             Выбор покупателей
                         </h2>
@@ -5829,6 +5829,7 @@
     <script src="./js/splide-extension-auto-scroll.min.js"></script>
     <script src="./js/fancybox.umd.js"></script>
     <script src="./js/lazysizes.min.js" type="module" async=""></script>
+    <script src="./js/mobile.js" type="module"></script>
     <script src="./js/script.js" type="module"></script>
 </body>
 
