Адаптив страницы каталога[1]

--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
                                     Личный кабинет
                                 </span>
                             </span>
-
+    
                         </a>
                         <a class="header-menu__panel-item" href="#">
                             <span class="header-menu__panel-img">
@@ -1290,9 +1290,8 @@
                             aria-label="Перейти на YouTube-канал компании">
                             <img src="./img/icons/footer/youtube.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu telegram"
-                            href="https://t.me/ekromshop" target="_blank"
-                            aria-label="Перейти в телеграм-канал компании">
+                        <a class="header-menu-link round-btn round-btn--header-menu telegram" href="https://t.me/ekromshop"
+                            target="_blank" aria-label="Перейти в телеграм-канал компании">
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
                         <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="#"
@@ -1301,7 +1300,6 @@
                         </a>
                     </div>
                 </div>
-
             </div>
         </header>
 
@@ -5865,7 +5863,9 @@
             </li>
         </ul>
     </div>
-
+    <div class="mobile-overlay">
+        
+    </div>
     <script>
         const allSkeletons = document.querySelectorAll('.skeleton');
         window.addEventListener('load', function () {
