Рабочий коммит; начал адаптив страницы товара

--- a/catalog.html
+++ b/catalog.html
@@ -1358,6 +1358,9 @@
                         <aside class="aside">
                             <div class="aside__inner">
                                 <div class="filter">
+                                    <a class="filter-items__show-results blue" href="#" style="top: 50%;" >
+                                        Показать
+                                    </a>
                                     <h3 class="filter-title">
                                         Фильтр
                                     </h3>
@@ -1496,9 +1499,9 @@
                                                 </ul>
                                             </div>
                                         </div>
-                                        <a class="filter-items__show-results blue" href="#" style="top: 50%">
+                                        <!-- <a class="filter-items__show-results blue" href="#" style="top: 50%">
                                             Показать
-                                        </a>
+                                        </a> -->
                                     </div>
     
                                     <!-- <div class="filter-items-btn">
@@ -1591,7 +1594,7 @@
                                         <a class="product-card__img-box-link" href="./product.html">
                                             <img class="lazyload product-card__img" data-src="./img/card-gallery/1.webp"
                                                 alt="">
-                                            <div class="label-container" style="display: none;">
+                                            <div class="label-container" style="display: block;">
                                                 <div class="label" style="background-color: #FF8023;">
                                                     Новинка
                                                 </div>
@@ -1628,10 +1631,10 @@
 
                                         <div class="product-info">
                                             <div class="product-info__available skeleton">
-                                                <div class="product-info__color" style="background-color: #6C7683;">
+                                                <div class="product-info__color" style="background-color: #75D14A;">
                                                 </div>
                                                 <p class="product-info__status">
-                                                    Нет в наличии
+                                                    В наличии
                                                 </p>
                                                 <p class="product-info__delivery">
                                                 </p>
@@ -1878,10 +1881,10 @@
 
                                         <div class="product-info">
                                             <div class="product-info__available skeleton">
-                                                <div class="product-info__color" style="background-color: #6C7683;">
+                                                <div class="product-info__color" style="background-color: #A6C3EE;">
                                                 </div>
                                                 <p class="product-info__status">
-                                                    Нет в наличии
+                                                    Под заказ
                                                 </p>
                                                 <p class="product-info__delivery">
                                                 </p>
@@ -2091,13 +2094,13 @@
                                         <a class="product-card__img-box-link" href="./product.html">
                                             <img class="lazyload product-card__img" data-src="./img/card-gallery/1.webp"
                                                 alt="">
-                                            <div class="label-container" style="display: none;">
-                                                <div class="label" style="background-color: #FF8023;">
-                                                    Новинка
+                                            <div class="label-container" style="display: block;">
+                                                <div class="label" style="background-color: #F63B00;">
+                                                    Промо
                                                 </div>
-                                                <div class="label" style="background-color: #D44F68;">
-                                                    Комплектом дешевле
-                                                </div>
+                                            </div>
+                                            <div class="discount-label">
+                                                -50%
                                             </div>
                                             <div class="thumbs">
                                                 <div class="thumb">
@@ -2128,10 +2131,10 @@
 
                                         <div class="product-info">
                                             <div class="product-info__available skeleton">
-                                                <div class="product-info__color" style="background-color: #6C7683;">
+                                                <div class="product-info__color" style="background-color: #A6C3EE;">
                                                 </div>
                                                 <p class="product-info__status">
-                                                    Нет в наличии
+                                                    Под заказ
                                                 </p>
                                                 <p class="product-info__delivery">
                                                 </p>
@@ -2212,10 +2215,11 @@
                                             </div>
 
                                             <div class="product-card__prices skeleton">
-                                                <span class="product-card__price">
-                                                    6 781 ₽
+                                                <span class="product-card__price product-card__price--discount">
+                                                    4 812 ₽
                                                 </span>
                                                 <span class="product-card__price-old">
+                                                    6 781 ₽
                                                 </span>
                                             </div>
 
@@ -2341,12 +2345,9 @@
                                         <a class="product-card__img-box-link" href="./product.html">
                                             <img class="lazyload product-card__img" data-src="./img/card-gallery/1.webp"
                                                 alt="">
-                                            <div class="label-container" style="display: none;">
-                                                <div class="label" style="background-color: #FF8023;">
-                                                    Новинка
-                                                </div>
-                                                <div class="label" style="background-color: #D44F68;">
-                                                    Комплектом дешевле
+                                            <div class="label-container" style="display: block;">
+                                                <div class="label" style="background-color: #50B09B;">
+                                                    15% за комплект
                                                 </div>
                                             </div>
                                             <div class="thumbs">
@@ -8550,7 +8551,6 @@
         </ul>
     </div>
     <div class="mobile-overlay">
-
     </div>
     <script>
         const allSkeletons = document.querySelectorAll('.skeleton');
