Закончил адаптив страницы товара

--- a/index.html
+++ b/index.html
@@ -1654,7 +1654,7 @@
                                             <a class="product-card__img-box-link" href="./product.html">
                                                 <img class="lazyload product-card__img"
                                                     data-src="./img/card-gallery/1.webp" alt="">
-                                                <div class="label-container" style="display: block;">
+                                                <div class="label-container" style="display: flex;">
                                                     <div class="label" style="background-color: #FF8023;">
                                                         Новинка
                                                     </div>
@@ -2162,7 +2162,7 @@
                                             <a class="product-card__img-box-link" href="./product.html">
                                                 <img class="lazyload product-card__img"
                                                     data-src="./img/card-gallery/1.webp" alt="">
-                                                <div class="label-container" style="display: block;">
+                                                <div class="label-container" style="display: flex;">
                                                     <div class="label" style="background-color: #F63B00;">
                                                         Промо
                                                     </div>
@@ -2411,7 +2411,7 @@
                                             <a class="product-card__img-box-link" href="./product.html">
                                                 <img class="lazyload product-card__img"
                                                     data-src="./img/card-gallery/1.webp" alt="">
-                                                <div class="label-container" style="display: block;">
+                                                <div class="label-container" style="display: flex;">
                                                     <div class="label" style="background-color: #50B09B;">
                                                         15% за комплект
                                                     </div>
