--- a/cart.html
+++ b/cart.html
@@ -1334,7 +1334,7 @@
                 </div>
             </div>
 
-            <!-- <div class="cart">
+            <div class="cart">
                 <div class="container">
                     <div class="cart-list__tools skeleton">
                         <div class="cart-list__counter">
@@ -1830,7 +1830,7 @@
                         </aside>
                     </div>
                 </div>
-            </div> -->
+            </div> 
 
             <div class="cart-empty" style="display: block;">
                 <div class="container">
